site/css/main.scss
---
---
@charset "utf-8";

// ==  Site specific styles

// Styles for Better banner - these will be merged into a future version of the BAS Style Kit

$beta-phase: #f47738;

.label-app-phase-beta {
  background-color: $beta-phase;
  border-radius: 0;
}

// Styles for Cookie banner - these will be merged into a future version of the BAS Style Kit

.alert-app-top-pin {
  margin-bottom: 0;
  border: none;
}

.alert-app-cookie-banner {
  background-color: #006AAA;
  color: white;

  .alert-link {
    color: white;
  }

  .close {
    filter: alpha(opacity=100);
    opacity: 1;

    &:focus, &:hover {
      color: #E7EBF1;
    }
  }
}

// Styles for main navigation

.bsk-docs-main-navigation {
  border-left: none;
  border-right: none;

  &.no-margin-bottom {
      margin-bottom: 0;
  }
}

// Styles for BAS logo shown on homepage

.bsk-docs-symbol {
  display: inline-block;
  height: 256px;
  width: 256px;
  background-image: url('{{ "/img/bas-logo-roundel-only.png" | prepend: site.baseurl }}');
  background-repeat: no-repeat;
  background-size: contain;
  border: 3px solid #ffffff;
  border-radius: 100%;
}

// Background image shown on homepage

.bsk-docs-masthead {
  background-image: url('{{ "/img/site-masthead-tom-welsh.jpg" | prepend: site.baseurl }}');
  background-repeat: no-repeat;
  background-size: cover;
}

// Copyright notice shown in the bottom-right of images

.bsk-docs-image-copyright-container {
  display: block;
  position: relative;
}

.bsk-docs-image-copyright-notice {
  position: absolute;
  right: 0;
  bottom: 0;
  padding: 3px 8px;
  background-color: rgba(51, 51, 51, 0.8);
  color: #FFFFFF;
}

// Styles for sections on the homepage

.bsk-docs-home-sections {
  section {
    margin-top: 40px;
    margin-bottom: 40px;
  }
  h2 {
    margin-bottom: 20px;
  }
}

// Styles for feedback form

.app-feedback-form {
  fieldset {
    margin-top: 40px;
  }

  .help-block.margin-before {
    margin-bottom: 20px;
  }
  .help-block.margin-after {
    margin-top: 20px;
  }

  .collapse {
    margin-top: 20px;
  }
}

// Styles for displaying pre blocks like code blocks where white-space needs preserving

.bsk-docs-like-code {
  padding: 2px 4px;
  font-size: 90%;
  background-color: #f9f2f4;
  color: #c7254e;
  border: none;
}

// Styles for displaying rendered portions of examples

.bsk-docs-example {
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 0;

  padding: 25px;
  border: 2px solid #E7EBF1;
  border-bottom: none;
}

// Styles for displaying columns in grid system examples

.bsk-docs-example .row>[class^=col-] {
  padding-top: 10px;
  padding-bottom: 10px;

  background-color: rgba(195, 195, 195,.15);
  border: 1px solid rgba(140, 140, 140,.2);
  text-align: center;
}

// Styles for collection index jumbotron's

.bsk-docs-collection-masthead {
  background-color: #006AAA;
  color: #FFFFFF;
}

// Styles for colour swatches - base classes may become a component in the future
// These are also used for icon lists

@import 'swatches';

// Styles for syntax highlighting

@import 'syntax-highlighting';

.highlight {
  padding: 9px 14px;
  margin-bottom: 14px;
  background-color: #F4F6F9;
  border: 1px solid #E7EBF1;

  pre {
    margin-top: 0;
    margin-bottom: 0;
    padding: 0;
    background-color: transparent;
    border: 0
  }
}

// Styles for section metadata

.bsk-docs-section-metadata {
  margin-left: -5px;
  margin-bottom: 25px;
  padding-left: 0;

  list-style: none;
  color: #777777;

  &> li {
    display: inline-block;
    padding-right: 5px;
    padding-left: 5px;
  }
}

// Styles for simulating fonts

.bsk-docs-font-sample-open-sans-light {
  font-family: "Open Sans","Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 300;
}
.bsk-docs-font-sample-open-sans-regular {
  font-family: "Open Sans","Helvetica Neue", Helvetica, Arial, sans-serif;
}
.bsk-docs-font-sample-open-sans-bold {
  font-family: "Open Sans","Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
}

.bsk-docs-font-sample-gill-sans-light {
  font-family: "Gill Sans","Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 100;
  font-size: 15px;
}
.bsk-docs-font-sample-gill-sans-book {
  font-family: "Gill Sans","Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 200;
  font-size: 15px;
}
.bsk-docs-font-sample-gill-sans-roman {
  font-family: "Gill Sans","Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 300;
  font-size: 15px;
}

.bsk-docs-font-sample-menlo-regular {
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
}

// Temporary styles for design phases (i.e. discovery, alpha, etc.)
// These will be replaced with a proper set of label variants when the GDS colour scheme is integrated

.label-phase {
    border-radius: 0;

    font-weight: normal;
    text-transform: uppercase;
  }

  .label-phase-alpha {
    background-color: #D53880;
  }
  .label-phase-beta {
    background-color: #F47738;
  }
  .label-phase-live {
    background-color: #85994B;
  }
  .label-phase-deprecated {
    background-color: #6F777B;
  }

// Temporary styles for issue components (i.e. issue id + status)
// These will be become a dedicated component based on labels in the future

.label-jira-issue {
  padding: 0;

  border-radius: 0;
  font-weight: normal;

  .jira-issue-link,
  .jira-issue-status {
    padding: .2em .6em .3em;
  }

  .jira-issue-link {
    background-color: #eeeeee;
    color: #333333;
  }

  .jira-issue-status {
    &.jira-issue-status-to-do {
      background-color: #4A6785;
      color: #ffffff;
    }
    &.jira-issue-status-in-progress,
    &.jira-issue-status-in-review {
      background-color: #FFD351;
      color: #594300;
    }
    &.jira-issue-status-done,
    &.jira-issue-status-cancelled {
      background-color: #14892C;
      color: #ffffff;
    }
    &.jira-issue-status-unknown {
      background-color: #333333;
      color: #eeeeee;
    }
  }
}

